--- a/app/assets/stylesheets/modules/navbar.scss
+++ b/app/assets/stylesheets/modules/navbar.scss
@@ -71,7 +71,8 @@
       }
 
       &.dropdown {
-
+z-index: 100;
+position: relative;
         > .dropdown-toggle > .caret {
           margin-top: (l(2) - 4px) / 2;
         }
@@ -90,7 +91,7 @@
           @include box-shadow(none);
           border-radius: $radius;
           background-color: lighten($blue, 20%);
-          border: none;
+          border: none;z-index: 100;
 
           &:before {
             border-bottom-color: transparent;
